--- a/apps/ruhnet-provisioner/views/phonemodels.html
+++ b/apps/ruhnet-provisioner/views/phonemodels.html
@@ -143,11 +143,7 @@
     </div>
   </div>
   <div class="form-control">
-    <button
-      id="add-phone-model-form"
-      class="btn btn-sm btn-outline-primary"
-      style="margin-top: 10px"
-    >
+    <button id="add-phone-model-form" class="btn btn-sm btn-outline-primary">
       +
     </button>
   </div>
