--- a/apps/ruhnet-provisioner/views/customconfig.html
+++ b/apps/ruhnet-provisioner/views/customconfig.html
@@ -2,7 +2,7 @@
   <h4 id="custom-config-title">{{ i18n.provisioner.customConfig.title }}</h4>
 
   <div class="form-control">
-    <div id="custom-config-input"></div>
+    <div id="custom-config-show"></div>
     <br />
     <i
       class="fa fa-remove custom-config-delete"
@@ -62,7 +62,7 @@
       </button>
     </div>
 
-    <div class="form-row" id="new-group-container">
+    <div class="form-row" style="display: none" id="new-group-container">
       <input
         type="text"
         id="new-group-name"
